[gd_scene load_steps=79 format=2]

[ext_resource path="res://assets/Bogdan/Bogdan_walk/Pixilart Sprite Sheet (6).png" type="Texture" id=1]
[ext_resource path="res://assets/Bogdan/Bogdan_idle/Pixilart Sprite Sheet (5).png" type="Texture" id=2]
[ext_resource path="res://scenes/bogdan_player.gd" type="Script" id=3]
[ext_resource path="res://scenes/AnimatedSprite.gd" type="Script" id=4]
[ext_resource path="res://assets/Bogdan/Bogdan_walkback/bogdan_walkback.png" type="Texture" id=5]
[ext_resource path="res://assets/Bogdan/Bogdan_shotgun/Pixilart Sprite Sheet (15).png" type="Texture" id=6]
[ext_resource path="res://scenes/AnimatedSprite2.gd" type="Script" id=7]
[ext_resource path="res://assets/Bogdan/Bogdan_ak47/Pixilart Sprite Sheet (16).png" type="Texture" id=8]
[ext_resource path="res://assets/Bogdan/BogdanHIT.png" type="Texture" id=9]
[ext_resource path="res://scenes/Hud/health_bar.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/SkillTree/SkillTree.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Area2D.gd" type="Script" id=12]
[ext_resource path="res://assets/Sound_tracks/12-Gauge-Pump-Action-Shotgun-Close-Gunshot-A-www.fesliyanstudios.com.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/Sound_tracks/1911-.45-ACP-Close-Single-Gunshot-A-www.fesliyanstudios.com.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/Sound_tracks/mixkit-shotgun-hard-pump-1665.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/Sound_tracks/Exorcista/bogdan_hit2.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/Sound_tracks/Exorcista/bogdan_hit_1.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/Sound_tracks/Exorcista/bogdan_died.mp3" type="AudioStream" id=18]
[ext_resource path="res://assets/Sound_tracks/Exorcista/bogdan_died_1.mp3" type="AudioStream" id=19]
[ext_resource path="res://assets/Sound_tracks/Exorcista/bogdan_died_2.mp3" type="AudioStream" id=20]
[ext_resource path="res://scenes/Menu/DeadMenu.tscn" type="PackedScene" id=21]

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 66 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "back",
"speed": 15.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 704, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 832, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 35 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 576, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 704, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 832, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1088, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 64, 17 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 64, 17 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "ak47",
"speed": 15.0
}, {
"frames": [ SubResource( 66 ) ],
"loop": true,
"name": "ak47-idle",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": false,
"name": "shotgun",
"speed": 20.0
}, {
"frames": [ SubResource( 67 ) ],
"loop": true,
"name": "shotgun-idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
height = 21.3333

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12, 3.5 )

[node name="Bogdan" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_mask = 33546
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.76837e-07, -2.66667 )
scale = Vector2( 0.666667, 0.727273 )
frames = SubResource( 12 )
animation = "idle"
script = ExtResource( 4 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="AnimatedSprite"]
position = Vector2( -3, 6.66667 )
scale = Vector2( 0.815, 0.641 )
frames = SubResource( 27 )
animation = "ak47-idle"
offset = Vector2( 10, 0 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.66667, -4 )
shape = SubResource( 13 )

[node name="health_bar" parent="." instance=ExtResource( 10 )]

[node name="CanvasLayer" parent="." instance=ExtResource( 11 )]
offset = Vector2( -2000, -2000 )
transform = Transform2D( 1, 0, 0, 1, -2000, -2000 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 64
script = ExtResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.333333, 18 )
shape = SubResource( 14 )

[node name="shotgun_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="ak47_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="shotgun_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="ak47_reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="die1" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 19 )

[node name="die2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="die3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="DeadMenu" parent="." instance=ExtResource( 21 )]
offset = Vector2( -2000, -2000 )
transform = Transform2D( 1, 0, 0, 1, -2000, -2000 )

[connection signal="add_skill_point" from="." to="CanvasLayer" method="_on_Bogdan_add_skill_point"]
[connection signal="animate" from="." to="AnimatedSprite" method="_on_Bogdan_animate"]
[connection signal="can_shoot" from="." to="AnimatedSprite/AnimatedSprite2" method="_on_Bogdan_can_shoot"]
[connection signal="change_gun" from="." to="health_bar" method="_on_Bogdan_change_gun"]
[connection signal="change_permanent_buff" from="." to="health_bar" method="_on_Bogdan_change_permanent_buff"]
[connection signal="damage_change" from="." to="health_bar" method="_on_Bogdan_damage_change"]
[connection signal="firerate_change" from="." to="health_bar" method="_on_Bogdan_firerate_change"]
[connection signal="heal" from="." to="health_bar" method="_on_Bogdan_heal"]
[connection signal="hitted" from="." to="health_bar" method="_on_Bogdan_hitted"]
[connection signal="key_collected" from="." to="health_bar" method="_on_Bogdan_key_collected"]
[connection signal="range_change" from="." to="health_bar" method="_on_Bogdan_range_change"]
[connection signal="reload" from="." to="AnimatedSprite/AnimatedSprite2" method="_on_Bogdan_reload"]
[connection signal="rifle" from="." to="AnimatedSprite/AnimatedSprite2" method="_on_Bogdan_rifle"]
[connection signal="shotgun_reload" from="." to="AnimatedSprite/AnimatedSprite2" method="_on_Bogdan_shotgun_reload"]
[connection signal="speed_change" from="." to="health_bar" method="_on_Bogdan_speed_change"]
[connection signal="toReload" from="." to="AnimatedSprite/AnimatedSprite2" method="_on_Bogdan_toReload"]
[connection signal="aim" from="AnimatedSprite/AnimatedSprite2" to="AnimatedSprite" method="_on_AnimatedSprite2_aim"]
[connection signal="stats_updated" from="CanvasLayer" to="." method="_on_CanvasLayer_stats_updated"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
